# g3dviewer

./: AUTHORS  COPYING.trackball  CREDITS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.thumbnailer  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in
glade/: Makefile  Makefile.am  Makefile.in  g3dviewer.glade
m4/: Makefile  Makefile.am  Makefile.in  acinclude.m4
man/: Makefile  Makefile.am  Makefile.in  g3dviewer.1
pixmaps/: Makefile  Makefile.am  Makefile.in  icon16_material.xpm  icon16_model.xpm  icon16_plugins.xpm  icon16_texture.xpm
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  de.gmo  de.po  g3dviewer.pot
src/: Makefile  Makefile.am  Makefile.in  gl.c  gl.h  glarea.c  glarea.h  gui_callbacks.c  gui_glade.c  gui_glade.h  gui_infowin.c  gui_infowin.h  gui_log.c  gui_log.h  main.c  main.h  model.c  model.h  screenshot.c  screenshot.h  texture.c  texture.h
src/.deps/: g3dviewer-gl.Po  g3dviewer-glarea.Po  g3dviewer-gui_callbacks.Po  g3dviewer-gui_glade.Po  g3dviewer-gui_infowin.Po  g3dviewer-gui_log.Po  g3dviewer-main.Po  g3dviewer-model.Po  g3dviewer-screenshot.Po  g3dviewer-texture.Po  g3dviewer-trackball.Po
thumbnailer/: Makefile  Makefile.am  Makefile.in  g3d-thumbnailer  g3d-thumbnailer.c  g3d-thumbnailer.schema  g3dviewer.xml  gen_schema.sh  make-thumbnailer.sh
thumbnailer/.deps/: g3d_thumbnailer-g3d-thumbnailer.Po  g3d_thumbnailer-gl.Po  g3d_thumbnailer-screenshot.Po  g3d_thumbnailer-texture.Po  g3d_thumbnailer-trackball.Po
