PKGICONS = \
	icon16_plugins.xpm \
	icon16_model.xpm \
	icon16_material.xpm \
	icon16_texture.xpm \
	icon16_property.png \
	icon16_object.png

ICONS =

pkgpixmapdir = $(pkgdatadir)/pixmaps
pixmapdir = $(datadir)/pixmaps

pkgpixmap_DATA = ${PKGICONS}
pixmap_DATA = ${ICONS}

EXTRA_DIST = ${ICONS} ${PKGICONS}
